# WeaveWave

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
config/: musicgen_style_32khz.yaml
config/model/: musicgen_model.yaml
demo/: README.md
demo/app/: mllm_fastapi.py  theme_wave.py  weavewave_app.py
demo/app/alt/: mllm_subprocess.py  weavewave_app_v_0.py  weavewave_app_v_1.py  weavewave_app_v_2.py
demo/app/core/: __init__.py  config.py  mllm_client.py  music_generator.py
src/: evaluate.py  prepare_dataset.py  run_training.py
tests/: conftest.py  test_config.py  test_mllm_client.py  test_mllm_server.py  test_music_generator.py  test_prepare_dataset.py
weavewave/: __init__.py
weavewave/core/: __init__.py  config.py  logging.py  mllm_client.py  music_generator.py  types.py
weavewave/data/: __init__.py  prepare_dataset.py
weavewave/evaluation/: __init__.py  evaluate.py
weavewave/serving/: __init__.py  app.py  mllm_server.py  theme.py
weavewave/training/: __init__.py  runner.py  train.py
